Fixes padding issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   color: white;
-  padding: 0 24rem;
+  padding: 4rem 2rem;
 }
 
 .App-link {
